Removed tqdm_notebook call

--- a/CRF_FinalProject.ipynb
+++ b/CRF_FinalProject.ipynb
@@ -360,49 +360,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 225,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "437ede8043884b5e9ad3b90dc15ec167",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>HBox</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=4075), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from tqdm import tqdm_notebook\n",
-    "\n",
     "# Perform decoding on dev sets\n",
     "def inference(path, states, feature_dict):\n",
     "    '''\n",
@@ -427,9 +388,10 @@
     "        lines = f.readlines()\n",
     "        sentence = []\n",
     "        \n",
-    "        for line in tqdm_notebook(lines):\n",
+    "        for line in lines:\n",
     "            formatted_line = line.strip()\n",
     "            \n",
+    "            # Not the end of sentence, add it to the list\n",
     "            if len(formatted_line) > 0:\n",
     "                sentence.append(formatted_line)\n",
     "            else:\n",
