Updated to maintain default tag compatibility with Spanish

--- a/CRF_FinalProject.ipynb
+++ b/CRF_FinalProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "-44.57667948595218"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,9 +226,10 @@
     "    \n",
     "    return score\n",
     "\n",
-    "x = \"Great food with an awesome atmosphere !\".split()\n",
-    "y = \"O B-positive O O O B-positive O\".split()\n",
-    "compute_crf_score(x, y, f)"
+    "# # Test function\n",
+    "# x = \"Great food with an awesome atmosphere !\".split()\n",
+    "# y = \"O B-positive O O O B-positive O\".split()\n",
+    "# compute_crf_score(x, y, f)"
    ]
   },
   {
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +251,7 @@
        "['O', 'B-positive', 'O', 'O', 'O', 'B-positive', 'O']"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,12 +284,13 @@
     "    \n",
     "    return list(states)\n",
     "\n",
-    "def viterbi_decode(x, states, feature_dict):\n",
+    "def viterbi_decode(x, states, feature_dict, default_index=0):\n",
     "    '''\n",
     "    Inputs:\n",
     "        x (list[str]): Input sequence.\n",
     "        states (list[str]): Possible output states.\n",
     "        feature_dict (dict[str] -> float): Dictionary that maps a given feature to its score.\n",
+    "        default_index (int, optional): Index to default for backpointer if scores are nan.\n",
     "    Outputs:\n",
     "        y (list[str]): Most probable output sequence.\n",
     "    '''\n",
@@ -296,7 +298,7 @@
     "    n = len(x) # Number of words\n",
     "    d = len(states) # Number of states\n",
     "    scores = np.full((n, d), np.nan)\n",
-    "    bp = np.ones((n, d), dtype=np.int) # TODO: Default to 'O', or something else?\n",
+    "    bp = np.full((n, d), default_index, dtype=np.int) # TODO: Default to 'O', or something else?\n",
     "\n",
     "    # Convert to lowercase\n",
     "    x = [x[i].lower() for i in range(n)]\n",
@@ -330,7 +332,7 @@
     "    \n",
     "    # Compute for STOP\n",
     "    highest_score = None\n",
-    "    highest_bp = 1\n",
+    "    highest_bp = default_index\n",
     "    \n",
     "    for j, prev_y in enumerate(states):\n",
     "        if not np.isnan(scores[n-1, j]):\n",
@@ -360,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,6 +378,8 @@
     "    Outputs:\n",
     "        None\n",
     "    '''\n",
+    "    \n",
+    "    default_index = states.index('O')\n",
     "    \n",
     "    # TODO: Can downcase everything? Ask the TA\n",
     "    sentences = []\n",
@@ -403,7 +407,7 @@
     "    with open(output_filename, \"w\") as wf:\n",
     "        for sentence in sentences:\n",
     "            # Run predictions\n",
-    "            pred_sentence = viterbi_decode(sentence, states, feature_dict)\n",
+    "            pred_sentence = viterbi_decode(sentence, states, feature_dict, default_index)\n",
     "            \n",
     "            # Write original word and predicted tags\n",
     "            for i in range(len(sentence)):\n",
