Added gradients for START/STOP and emission

--- a/CRF_FinalProject_JY.ipynb
+++ b/CRF_FinalProject_JY.ipynb
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
        "             'emission:I-neutral+was': 0.0,\n",
        "             'emission:I-positive+(': 0.0,\n",
        "             'emission:I-positive+)': 0.0,\n",
-       "             'emission:I-positive+,': 0.0004615484028919783,\n",
+       "             'emission:I-positive+,': 0.00046154840289197845,\n",
        "             'emission:I-positive+.': 0.0,\n",
        "             'emission:I-positive+all': 0.0,\n",
        "             'emission:I-positive+dessserts': 0.0,\n",
@@ -699,35 +699,67 @@
        "             'emission:O+all': 1.956557242386638,\n",
        "             'emission:O+dessserts': 0.0,\n",
        "             'emission:O+except': 1.0000000000000002,\n",
-       "             'emission:O+food': 0.24017585355547486,\n",
+       "             'emission:O+food': 0.24017585355547488,\n",
        "             'emission:O+for': 1.0000000000000002,\n",
        "             'emission:O+great': 1.0,\n",
        "             'emission:O+in': 0.9975922322435936,\n",
        "             'emission:O+the': 1.9982036452793972,\n",
        "             'emission:O+was': 1.0,\n",
-       "             'transition:B-negative+I-negative': 0.0028261114245159884,\n",
-       "             'transition:B-negative+O': 0.016030811299687833,\n",
+       "             'transition:B-negative+B-negative': 4.3899709325807876e-05,\n",
+       "             'transition:B-negative+B-neutral': 1.694614933572152e-05,\n",
+       "             'transition:B-negative+B-positive': 0.00014460357571300725,\n",
+       "             'transition:B-negative+I-negative': 2.095210697753371e-05,\n",
+       "             'transition:B-negative+I-neutral': 9.314362362866155e-08,\n",
+       "             'transition:B-negative+I-positive': 9.91158177396702e-06,\n",
+       "             'transition:B-negative+O': 1.184710370875478,\n",
        "             'transition:B-negative+STOP': 0.0,\n",
-       "             'transition:B-neutral+I-neutral': 0.001443043820623956,\n",
-       "             'transition:B-neutral+O': 0.011237771488373774,\n",
+       "             'transition:B-neutral+B-negative': 7.98630111214766e-05,\n",
+       "             'transition:B-neutral+B-neutral': 3.0828689612058725e-05,\n",
+       "             'transition:B-neutral+B-positive': 0.0002630649986692288,\n",
+       "             'transition:B-neutral+I-negative': 5.128823356013067e-08,\n",
+       "             'transition:B-neutral+I-neutral': 1.6944828027317546e-07,\n",
+       "             'transition:B-neutral+I-positive': 4.3043532523970806e-07,\n",
+       "             'transition:B-neutral+O': 0.06268215768521772,\n",
        "             'transition:B-neutral+STOP': 0.0,\n",
-       "             'transition:B-positive+B-positive': 5.2354026582679357e-05,\n",
-       "             'transition:B-positive+I-positive': 0.014842098792223568,\n",
-       "             'transition:B-positive+O': 0.05401371535885889,\n",
+       "             'transition:B-positive+B-negative': 0.00015603062839364586,\n",
+       "             'transition:B-positive+B-neutral': 6.023088467582999e-05,\n",
+       "             'transition:B-positive+B-positive': 0.0005139575439786458,\n",
+       "             'transition:B-positive+I-negative': 1.9736515956961362e-05,\n",
+       "             'transition:B-positive+I-neutral': 3.3105590785990587e-07,\n",
+       "             'transition:B-positive+I-positive': 9.749838140225396e-06,\n",
+       "             'transition:B-positive+O': 0.5549083644247392,\n",
        "             'transition:B-positive+STOP': 0.0,\n",
-       "             'transition:I-negative+I-negative': 1.3098918656357366e-05,\n",
-       "             'transition:I-negative+O': 2.8819855508618194e-05,\n",
+       "             'transition:I-negative+B-negative': 2.4714808022833008e-05,\n",
+       "             'transition:I-negative+B-neutral': 0.0,\n",
+       "             'transition:I-negative+B-positive': 2.2447030800216402e-05,\n",
+       "             'transition:I-negative+I-negative': 0.0,\n",
+       "             'transition:I-negative+I-neutral': 0.0,\n",
+       "             'transition:I-negative+I-positive': 0.0,\n",
+       "             'transition:I-negative+O': 0.0020761790051530052,\n",
        "             'transition:I-negative+STOP': 0.0,\n",
-       "             'transition:I-neutral+I-neutral': 6.602471188337798e-06,\n",
-       "             'transition:I-neutral+O': 1.1875580090435682e-05,\n",
+       "             'transition:I-neutral+B-negative': 0.0,\n",
+       "             'transition:I-neutral+B-neutral': 0.0,\n",
+       "             'transition:I-neutral+B-positive': 0.0,\n",
+       "             'transition:I-neutral+I-negative': 0.0,\n",
+       "             'transition:I-neutral+I-neutral': 0.0,\n",
+       "             'transition:I-neutral+I-positive': 0.0,\n",
+       "             'transition:I-neutral+O': 0.000343878707725927,\n",
        "             'transition:I-neutral+STOP': 0.0,\n",
-       "             'transition:I-positive+I-positive': 1.7590838784122792e-05,\n",
-       "             'transition:I-positive+O': 3.660822923710579e-05,\n",
+       "             'transition:I-positive+B-negative': 1.6229571778155357e-05,\n",
+       "             'transition:I-positive+B-neutral': 4.608501819865196e-06,\n",
+       "             'transition:I-positive+B-positive': 4.2147436409166896e-05,\n",
+       "             'transition:I-positive+I-negative': 7.2885808798732865e-09,\n",
+       "             'transition:I-positive+I-neutral': 2.4080328176608193e-08,\n",
+       "             'transition:I-positive+I-positive': 9.348947249894888e-08,\n",
+       "             'transition:I-positive+O': 0.001730501427217545,\n",
        "             'transition:I-positive+STOP': 0.0,\n",
-       "             'transition:O+B-negative': 0.0017668711662256914,\n",
-       "             'transition:O+B-neutral': 0.00043862499859033453,\n",
-       "             'transition:O+B-positive': 0.008127518744378783,\n",
-       "             'transition:O+O': 0.2407272159860541,\n",
+       "             'transition:O+B-negative': 1.1742638513535508,\n",
+       "             'transition:O+B-neutral': 0.06294395133101609,\n",
+       "             'transition:O+B-positive': 0.5449576536120313,\n",
+       "             'transition:O+I-negative': 0.0020825936442271198,\n",
+       "             'transition:O+I-neutral': 0.0003432609795859887,\n",
+       "             'transition:O+I-positive': 0.0017734264508943568,\n",
+       "             'transition:O+O': 10.405702687690905,\n",
        "             'transition:O+STOP': 1.0,\n",
        "             'transition:START+B-negative': 0.010362188060035062,\n",
        "             'transition:START+B-neutral': 0.0,\n",
@@ -738,7 +770,7 @@
        "             'transition:START+O': 0.9799132852457739})"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +821,7 @@
     "                    # Sum exponentials\n",
     "                    overall_score = np.exp(emission_score + transition_score) * forward_scores[i-1, k]\n",
     "\n",
-    "                    # Better score is found: Add to score array\n",
+    "                    # Add to forward scores array\n",
     "                    forward_scores[i, j] += overall_score\n",
     "\n",
     "    # Compute for STOP\n",
@@ -828,7 +860,7 @@
     "                    # Sum exponentials\n",
     "                    overall_score = np.exp(emission_score + transition_score) * backward_scores[i, k]\n",
     "                    \n",
-    "                    # Better score is found: Add to score array\n",
+    "                    # Add to backward scores array\n",
     "                    backward_scores[i-1, j] += overall_score\n",
     "    \n",
     "    # Compute for START\n",
@@ -848,6 +880,13 @@
     "    \n",
     "    # Ensure forward and backward prob are the same up to floating point errors\n",
     "    assert(abs(forward_prob - backward_prob) < 1e-8)\n",
+    "    \n",
+    "#     for j in range(n):\n",
+    "#         denom = 0\n",
+    "#         for ui, u in enumerate(states):\n",
+    "#             for vi, v in enumerate(states):\n",
+    "#                 denom += forward_scores[j,ui] * backward_scores[j+1,vi]\n",
+    "#         print(denom)\n",
     "\n",
     "    expected_counts = np.zeros((n, d))\n",
     "    for i in range(n):\n",
@@ -869,26 +908,23 @@
     "        \n",
     "        stop_transition_key = f\"transition:{next_y}+STOP\"\n",
     "        feature_expected_counts[stop_transition_key] += expected_counts[n-1, j]\n",
-    "\n",
-    "    # Compute expected transition counts\n",
-    "    for i in range(0, n-1):\n",
-    "        for j, current_y in enumerate(states):\n",
-    "            for k, next_y in enumerate(states):\n",
-    "                transition_key = f\"transition:{current_y}+{next_y}\"\n",
-    "#                 feature_expected_counts[transition_key] += expected_counts[i, j] * expected_counts[i+1, k]              \n",
-    "                emission_key = f\"emission:{current_y}+{x[i]}\"\n",
     "    \n",
-    "                if transition_key in feature_dict and emission_key in feature_dict:\n",
-    "                    transition_score = feature_dict[transition_key]\n",
-    "                    emission_score = feature_dict[emission_key]\n",
-    "                    overall_score = np.exp(transition_score + emission_score)\n",
-    "                    \n",
-    "                    denom = np.sum(forward_scores[i,:] * backward_scores[i,:])\n",
-    "                    transition_expected_counts = forward_scores[i, j] * backward_scores[i, k] * overall_score / denom\n",
-    "                    \n",
-    "                    assert(transition_expected_counts <= 1)\n",
+    "    # Compute expected transition counts\n",
+    "    for j, current_y in enumerate(states):\n",
+    "        for k, next_y in enumerate(states):\n",
+    "            transition_key = f\"transition:{current_y}+{next_y}\"\n",
     "\n",
-    "                    feature_expected_counts[transition_key] += transition_expected_counts\n",
+    "            for i in range(0, n-1):\n",
+    "#                 emission_key = f\"emission:{current_y}+{x[i]}\"\n",
+    "\n",
+    "#                 if transition_key in feature_dict and emission_key in feature_dict:\n",
+    "#                     transition_score = feature_dict[transition_key]\n",
+    "#                     emission_score = feature_dict[emission_key]\n",
+    "                    \n",
+    "#                     overall_score = forward_scores[i, j] * backward_scores[i+1, k] * np.exp(transition_score + emission_score) / denom\n",
+    "                \n",
+    "                overall_score = expected_counts[i, j] * expected_counts[i+1, k]\n",
+    "                feature_expected_counts[transition_key] += overall_score\n",
     "    \n",
     "    return feature_expected_counts\n",
     "\n",
@@ -897,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,14 +974,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 200,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'int'>, {'emission:O+all': 2, 'emission:O+in': 1, 'emission:O+,': 1, 'emission:O+the': 2, 'emission:B-positive+food': 1, 'emission:O+was': 1, 'emission:O+great': 1, 'emission:O+(': 1, 'emission:O+except': 1, 'emission:O+for': 1, 'emission:B-negative+dessserts': 1, 'emission:O+)': 1, 'emission:O+.': 1, 'transition:START+O': 1, 'transition:O+O': 10, 'transition:O+B-positive': 1, 'transition:B-positive+O': 1, 'transition:O+B-negative': 1, 'transition:B-negative+O': 1, 'transition:O+STOP': 1})\n"
+     ]
+    }
+   ],
    "source": [
     "feature_gradients = defaultdict(float)\n",
-    "limit = 3\n",
+    "limit = 1\n",
     "\n",
     "for i in range(limit):#len(train_labels)):\n",
     "    x = train_inputs[i]\n",
@@ -953,6 +997,7 @@
     "    \n",
     "    feature_expected_counts = forward_backward(x, f, states)\n",
     "    actual_counts = get_feature_count(x, y, f)\n",
+    "    print(actual_counts)\n",
     "\n",
     "    for k, v in feature_expected_counts.items():\n",
     "        feature_gradients[k] += v\n",
@@ -963,14 +1008,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6420607405743795 -17.710934402902545\n"
+      "-0.454036808150704 -0.4550423463879687\n"
      ]
     },
     {
@@ -980,7 +1025,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-291-4be2d42d7ce1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# Ensure numerical and analytical gradient are close\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumerical_gradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0manalytical_gradient\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumerical_gradient\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0manalytical_gradient\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m1e-3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-201-2463d0724569>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# Ensure numerical and analytical gradient are close\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumerical_gradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0manalytical_gradient\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumerical_gradient\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0manalytical_gradient\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m1e-3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
@@ -988,9 +1033,9 @@
    "source": [
     "# Check against numerical gradient is equal\n",
     "# feature_key = 'emission:B-positive+food'\n",
-    "feature_key = 'transition:O+O'\n",
+    "feature_key = 'transition:O+B-positive'\n",
     "new_f = f.copy()\n",
-    "delta = 1e-6\n",
+    "delta = 1e-10\n",
     "\n",
     "loss1 = compute_crf_loss(train_inputs[:limit], train_labels[:limit], f, states)\n",
     "new_f[feature_key] += delta\n",
