Added docstrings for gradient computation functions

--- a/CRF_FinalProject.ipynb
+++ b/CRF_FinalProject.ipynb
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,20 +521,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2178.0848344696287"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_dataset(path):\n",
     "    '''\n",
@@ -591,16 +580,20 @@
     "        sample_loss = compute_crf_loss_sample(input_sequences[i], input_labels[i], feature_dict, states)\n",
     "        loss += sample_loss\n",
     "    \n",
-    "    return loss\n",
-    "\n",
-    "f_zero = {k: -3 for k in f}\n",
-    "train_inputs, train_labels = get_dataset(data_dir / dataset / \"train\")\n",
-    "compute_crf_loss(train_inputs, train_labels, f, states)"
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 3(ii)\n",
+    "Forward backward algorithm for computing gradients."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,36 +780,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "feature_gradients = defaultdict(float)\n",
-    "\n",
-    "for i in range(len(train_labels)):\n",
-    "    x = train_inputs[i]\n",
-    "    y = train_labels[i]\n",
+    "def compute_gradients(train_inputs, train_labels, f, states):\n",
+    "    '''\n",
+    "    Uses the forward-backward algorithm to compute gradients analytically.\n",
     "    \n",
-    "    feature_expected_counts = forward_backward(x, f, states)\n",
-    "    actual_counts = get_feature_count(x, y, f)\n",
+    "    Inputs:\n",
+    "        train_inputs (list[str]): Input sequence.\n",
+    "        train_labels (list[str]): Input labels.\n",
+    "        f (dict[str] -> float): Dictionary that maps a given feature to its score.\n",
+    "        states (list[str]): List of unique states.\n",
+    "    Outputs:\n",
+    "        backward_score (float): Backward score for this sequence.\n",
+    "        feature_gradients (dict[str] -> float): Dictionary that maps a given feature to its analytical gradient.\n",
+    "    '''\n",
+    "    \n",
+    "    feature_gradients = defaultdict(float)\n",
     "\n",
-    "    for k, v in feature_expected_counts.items():\n",
-    "        feature_gradients[k] += v\n",
+    "    for i in range(len(train_labels)):\n",
+    "        x = train_inputs[i]\n",
+    "        y = train_labels[i]\n",
     "\n",
-    "    for k, v in actual_counts.items():\n",
-    "        feature_gradients[k] -= v"
+    "        feature_expected_counts = forward_backward(x, f, states)\n",
+    "        actual_counts = get_feature_count(x, y, f)\n",
+    "\n",
+    "        for k, v in feature_expected_counts.items():\n",
+    "            feature_gradients[k] += v\n",
+    "\n",
+    "        for k, v in actual_counts.items():\n",
+    "            feature_gradients[k] -= v\n",
+    "    \n",
+    "    return feature_gradients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can check the results numerically:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "train_inputs, train_labels = get_dataset(data_dir / dataset / \"train\")\n",
+    "\n",
     "# Check against numerical gradient for several values is equal\n",
     "feature_key_checks = ['emission:O+the', 'transition:START+O', 'transition:O+O']\n",
+    "feature_gradients = compute_gradients(train_inputs, train_labels, f, states)\n",
     "loss1 = compute_crf_loss(train_inputs, train_labels, f, states)\n",
     "delta = 1e-6\n",
     "\n",
