Added Markdown heading for part 4

--- a/CRF_FinalProject.ipynb
+++ b/CRF_FinalProject.ipynb
@@ -853,11 +853,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 4(i)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# vincent pls"
+   ]
   }
  ],
  "metadata": {
