Updated with gradient equation

--- a/CRF_FinalProject.ipynb
+++ b/CRF_FinalProject.ipynb
@@ -779,6 +779,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We wish to compute the gradient:\n",
+    "$\\frac{\\delta L(w)}{\\delta \\lambda_k} = \\sum_i E_{p(y|x_i)} [ f_k (x_i, y) ] - \\sum_i f_k (x_i, y_i) $\n",
+    "\n",
+    "which can be computed by subtracting the actual counts of the features from the expected counts of each feature."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -827,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
