Updated to account for all possible pairs (even unaligned ones)

--- a/CRF_FinalProject.ipynb
+++ b/CRF_FinalProject.ipynb
@@ -39,6 +39,10 @@
     "    count_emission = defaultdict(int) # Stores Count(y -> x), where key is tuple (x, y), and value is Count(y -> x)\n",
     "    count_labels = defaultdict(int) # Stores Count(y), where key is y\n",
     "    \n",
+    "    # For computing pairs that are not aligned\n",
+    "    unique_x = set()\n",
+    "    unique_y = set()\n",
+    "    \n",
     "    # Read from dataset path\n",
     "    with open(path) as f:\n",
     "        lines = f.readlines()\n",
@@ -56,6 +60,9 @@
     "\n",
     "                count_emission[(x, y)] += 1\n",
     "                count_labels[y] += 1\n",
+    "                \n",
+    "                unique_x.add(x)\n",
+    "                unique_y.add(y)\n",
     "    \n",
     "    # Result dictionary that maps str(x, y) to log(e(x|y)) values\n",
     "    f = {}\n",
@@ -68,6 +75,15 @@
     "        \n",
     "        # Store score\n",
     "        f[feature_str] = np.log(e)\n",
+    "    \n",
+    "    # Set features for emissions that are not aligned\n",
+    "    for x in unique_x:\n",
+    "        for y in unique_y:\n",
+    "            feature_str = f\"emission:{y}+{x}\"\n",
+    "            \n",
+    "            # Only set to -inf if it doesn't exist as an aligned pair\n",
+    "            if feature_str not in f:\n",
+    "                f[feature_str] = -np.inf\n",
     "    \n",
     "    return f"
    ]
@@ -97,6 +113,9 @@
     "    count_transition = defaultdict(int) # Key is tuple (y_i, y_{i-1}), and value is Count(y_{i-1}, y_i)\n",
     "    count_labels = defaultdict(int) # Stores Count(y_i), where key is y_i\n",
     "    \n",
+    "    # For computing pairs that are not aligned\n",
+    "    unique_y = set()\n",
+    "\n",
     "    # Read from dataset path\n",
     "    with open(path) as f:\n",
     "        lines = f.readlines()\n",
@@ -120,6 +139,8 @@
     "                \n",
     "                # Update for next word\n",
     "                prev_y = y\n",
+    "                \n",
+    "                unique_y.add(y)\n",
     "            else:\n",
     "                # End of sentence\n",
     "                # Store Count(STOP|y_n)\n",
@@ -142,6 +163,15 @@
     "        # Store score\n",
     "        f[feature_str] = np.log(q)\n",
     "    \n",
+    "    # Set features for transitions that are not aligned\n",
+    "    for prev_y in unique_y:\n",
+    "        for y in unique_y:\n",
+    "            feature_str = f\"transition:{prev_y}+{y}\"\n",
+    "            \n",
+    "            # Only set to -inf if it doesn't exist as an aligned pair\n",
+    "            if feature_str not in f:\n",
+    "                f[feature_str] = -np.inf\n",
+    "\n",
     "    return f"
    ]
   },
@@ -242,16 +272,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['O', 'B-positive', 'O', 'O', 'O', 'B-positive', 'O']"
+       "['I-negative',\n",
+       " 'I-negative',\n",
+       " 'I-negative',\n",
+       " 'I-negative',\n",
+       " 'I-negative',\n",
+       " 'I-negative',\n",
+       " 'B-neutral']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,8 +333,8 @@
     "    \n",
     "    n = len(x) # Number of words\n",
     "    d = len(states) # Number of states\n",
-    "    scores = np.full((n, d), np.nan)\n",
-    "    bp = np.full((n, d), default_index, dtype=np.int) # TODO: Default to 'O', or something else?\n",
+    "    scores = np.full((n, d), -np.inf) # Default state is -inf for missing values\n",
+    "    bp = np.full((n, d), default_index, dtype=np.int) # Set default backpointer to the default_index state\n",
     "\n",
     "    # Convert to lowercase\n",
     "    x = [x[i].lower() for i in range(n)]\n",
@@ -326,7 +362,7 @@
     "                    overall_score = emission_score + transition_score + scores[i-1, k]\n",
     "                    \n",
     "                    # Better score is found: Update backpointer and score arrays\n",
-    "                    if (np.isnan(scores[i, j]) and not np.isnan(overall_score)) or overall_score > scores[i, j]:\n",
+    "                    if overall_score > scores[i, j]:\n",
     "                        scores[i, j] = overall_score\n",
     "                        bp[i,j] = k\n",
     "    \n",
@@ -357,12 +393,12 @@
     "    return result\n",
     "\n",
     "states = get_states(data_dir / dataset / \"train\")\n",
-    "viterbi_decode(x, states, f) # Should be similar or equal to y"
+    "viterbi_decode(\"Great food with an hip atmosphere !\".split(), states, f) # Should be similar or equal to y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -837,19 +873,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking emission:O+the\n",
+      "Checking transition:START+O\n",
+      "Checking transition:O+O\n",
+      "Checking transition:I-negative+I-positive\n"
+     ]
+    }
+   ],
    "source": [
     "train_inputs, train_labels = get_dataset(data_dir / dataset / \"train\")\n",
     "\n",
     "# Check against numerical gradient for several values is equal\n",
-    "feature_key_checks = ['emission:O+the', 'transition:START+O', 'transition:O+O']\n",
+    "feature_key_checks = ['emission:O+the', 'transition:START+O', 'transition:O+O', 'transition:I-negative+I-positive']\n",
     "feature_gradients = compute_gradients(train_inputs, train_labels, f, states)\n",
     "loss1 = compute_crf_loss(train_inputs, train_labels, f, states)\n",
     "delta = 1e-6\n",
     "\n",
     "for feature_key in feature_key_checks:\n",
+    "    print(\"Checking\", feature_key)\n",
     "    new_f = f.copy()\n",
     "    new_f[feature_key] += delta\n",
     "\n",
@@ -871,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
